testing input data in form

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,11 @@
+admin_street:
+    resource: "@AdminBundle/Controller/StreetController.php"
+    type:     annotation
+
+admin_area:
+    resource: "@AdminBundle/Controller/AreaController.php"
+    type:     annotation
+
 admin_user:
     resource: "@AdminBundle/Controller/UserController.php"
     type:     annotation
